--- a/source/stylesheets/global/_nav.scss
+++ b/source/stylesheets/global/_nav.scss
@@ -24,7 +24,7 @@ nav {
       li {
         margin: 0 20px;
         font-size: 13px;
-        font-family: $font-demi;
+        font-family: $p22;
         letter-spacing: 1px;
         text-transform: uppercase;
       }
@@ -42,7 +42,7 @@ nav {
       .nav-primary-toggle {
         display: block;
         position: absolute;
-        font-family: $font-demi;
+        font-family: $p22;
         bottom: -50px;
         font-size: 17px;
         letter-spacing: 2px;
