--- a/source/stylesheets/pages/_landing.scss
+++ b/source/stylesheets/pages/_landing.scss
@@ -60,42 +60,6 @@
 }
 
 /************************************************************************\
-                              FLOORPLAN
-\************************************************************************/
-.workbench-floorplans {
-  position: relative;
-  z-index: 1;
-  @include clearfix();
-  li {
-    text-align: center;
-  }
-  .absolute-centered {
-    top: 4%;
-  }
-  h3 {
-    color: $white;
-    font-size: 16px;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-  }
-
-  img {
-    width: 100%;
-  }
-}
-.slideshow-controls {
-  z-index: 2;
-  bottom: 5%;
-  a.next {
-    // Using a sass mixin with a content block
-    @include button {
-      width: 200px;
-      margin: 0 auto;
-    }
-  }
-}
-
-/************************************************************************\
                                  TEAM
 \************************************************************************/
 .team-member {
@@ -117,7 +81,7 @@
   h3 {
     font-size: 22px;
     line-height: 22px;
-    margin-top: -4px;
+    padding-top: -4px;
   }
   h4 {
     float: left;
